<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/materialCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="20dp"
    app:cardBackgroundColor="@color/yellow_background"
    app:cardCornerRadius="20dp"
    app:cardUseCompatPadding="true"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:strokeColor="@color/black"
    app:strokeWidth="3dp">
<LinearLayout
    android:gravity="center"
    android:layout_gravity="center"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="12dp">
    <com.google.android.material.card.MaterialCardView
        app:strokeColor="@color/black"
        app:strokeWidth="2dp"
        android:layout_width="100dp"
        app:cardCornerRadius="100dp"
        app:cardBackgroundColor="@android:color/transparent"
        android:layout_height="100dp">
        <ImageView
            android:scaleType="centerCrop"
            android:id="@+id/trainingsIv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_trainings" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/nameTv"
        android:layout_marginTop="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/raleway"
        android:text="Workout Name"
        android:textColor="@color/black"
        android:textSize="24sp" />
    <TextView
        android:id="@+id/caloriesTv"
        android:layout_marginVertical="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/raleway"
        android:text="@string/calories_burned_s"
        android:textColor="@color/black"
        android:textSize="16sp" />
    <androidx.cardview.widget.CardView
        android:layout_marginTop="4dp"
        android:layout_marginHorizontal="4dp"
        app:cardCornerRadius="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/workoutTypeTv"
            android:padding="8dp"
            android:layout_marginHorizontal="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/raleway"
            android:text="Cardio"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_margin="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <androidx.cardview.widget.CardView
            android:layout_marginTop="4dp"
            android:layout_marginHorizontal="4dp"
            app:cardCornerRadius="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/setsTv"
                android:padding="8dp"
                android:paddingHorizontal="20dp"
                android:layout_marginHorizontal="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/raleway"
                android:text="@string/sets_s"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_marginTop="4dp"
            android:layout_marginHorizontal="4dp"
            app:cardCornerRadius="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/repsTv"
                android:padding="8dp"
                android:layout_marginHorizontal="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/raleway"
                android:text="@string/reps_s"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</LinearLayout>


    </com.google.android.material.card.MaterialCardView>