<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/yellow_background"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:alpha="0.05"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_trainings" />
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        app:cardBackgroundColor="@color/yellow_background"
        app:cardCornerRadius="20dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/black"
        app:strokeWidth="3dp">

        <LinearLayout
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowSpan="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="12dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_diary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/raleway"
                android:text="@string/add_meal_n_to_diary"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="16sp" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.imageview.ShapeableImageView
        app:strokeColor="@color/black"
        app:strokeWidth="4dp"
        android:id="@+id/buttonBack"
        android:src="@drawable/baseline_arrow_back_ios_new_24"
        android:layout_width="54dp"
        android:clickable="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_height="54dp"

        app:shapeAppearance="@style/ShapeAppearance.Material3.LargeComponent"
        app:layout_constraintBottom_toBottomOf="@+id/materialCardView"
        app:layout_constraintEnd_toStartOf="@+id/materialCardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:focusable="true" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardViewMeal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        app:cardBackgroundColor="@color/yellow_background"
        app:cardCornerRadius="20dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView"
        app:strokeColor="@color/black"
        app:strokeWidth="3dp">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_marginHorizontal="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="12dp">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardCornerRadius="100dp"
                    app:strokeColor="@color/black"
                    app:strokeWidth="2dp">

                    <ImageView
                        android:scaleType="centerCrop"
                        android:id="@+id/mealIv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/baseline_lunch_dining_24" />
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameTv"
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="4dp"
                    android:textColorHint="@color/black"
                    android:fontFamily="@font/raleway"
                    android:hint="@string/lunch_name"
                    android:textColor="@color/black"
                    android:textSize="21sp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/caloriesTv"
                    android:inputType="numberDecimal"
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/raleway"
                    android:hint="@string/calories"
                    android:textColorHint="@color/black"
                    android:textColor="@color/black"
                    android:textSize="21sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="4dp"
                        android:layout_marginVertical="4dp"
                        android:layout_marginTop="4dp"
                        app:cardCornerRadius="30dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/proteinTv"
                            android:layout_width="match_parent"
                            android:textAlignment="center"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginHorizontal="4dp"
                            android:layout_marginVertical="4dp"
                            android:fontFamily="@font/raleway"
                            android:padding="8dp"
                            android:hint="@string/protein"
                            android:inputType="numberDecimal"
                            android:textColorHint="@color/black"
                            android:textColor="@color/black"
                            android:textSize="21sp" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="4dp"
                        android:layout_marginVertical="4dp"
                        android:layout_marginTop="4dp"
                        app:cardCornerRadius="30dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/fatsTv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:inputType="numberDecimal"
                            android:layout_marginHorizontal="4dp"
                            android:layout_marginVertical="4dp"
                            android:fontFamily="@font/raleway"
                            android:textAlignment="center"
                            android:padding="8dp"
                            android:paddingHorizontal="20dp"
                            android:hint="@string/fats"
                            android:textColorHint="@color/black"
                            android:textColor="@color/black"
                            android:textSize="21sp" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="4dp"
                        android:layout_marginVertical="4dp"
                        android:layout_marginTop="4dp"
                        app:cardCornerRadius="30dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/carbsTv"
                            android:inputType="numberDecimal"
                            android:textAlignment="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginHorizontal="4dp"
                            android:layout_marginVertical="4dp"
                            android:fontFamily="@font/raleway"
                            android:padding="8dp"
                            android:hint="@string/carbs"
                            android:textColorHint="@color/black"
                            android:textColor="@color/black"
                            android:textSize="21sp" />
                    </androidx.cardview.widget.CardView>

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/buttonAdd"
                        android:layout_width="54dp"
                        android:layout_height="54dp"
                        android:layout_marginVertical="8dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:focusable="true"
                        android:src="@drawable/baseline_add_24"
                        app:layout_constraintBottom_toBottomOf="@+id/materialCardView"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/materialCardView"
                        app:layout_constraintTop_toTopOf="parent"
                        app:shapeAppearance="@style/ShapeAppearance.Material3.LargeComponent"
                        app:strokeColor="@color/black"
                        app:strokeWidth="4dp" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>



    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>